--- a/snake.html
+++ b/snake.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <!-- jhd -->
+    <!-- jhd bcbdj-->
     <h1 style="margin-bottom:30px; text-align:center;">Snake Game</h1>
     <div id="boards">
         <canvas id="board" height="500" width="500"></canvas>
